--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,8 +26,8 @@ body {
 }
 
 .default-body {
-	margin: 15px;
 	padding: 15px;
-	border: dashed grey 1px;
+	border: dashed #c3c3c3 1px;
+	margin-bottom: 15px;
 	box-shadow: -2px 2px 4px 0px #bbb;
 }
