--- a/src/app/posts/[cat]/posts.module.css
+++ b/src/app/posts/[cat]/posts.module.css
@@ -1,10 +1,24 @@
 .post {
+	display: flex;
 	margin-bottom: 25px;
 	border: solid #cccccc 1px;
 	padding: 15px;
 	list-style: none;
 	background-color: #f9f9f9;
 	box-shadow: -1px 1px 2px -0.5px #cccccc;
+}
+.post__picture {
+	box-sizing: border-box;
+	flex-shrink: 0;
+	width: 150px;
+	height: 150px;
+	border: solid #cccccc 1px;
+}
+.post__picture img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
 }
 .post__title {
 	margin-bottom: 7.5px;
