--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,10 +37,12 @@ body {
 }
 
 a:hover, .link:hover {
+	transition-duration: 0.2s;
 	color: #999999;
 }
 
 a:active, .link:active {
+	transition-duration: 0.2s;
 	position: relative;
 	top: 1px;
 	color: #333333;
