--- a/src/app/posts/[cat]/posts.module.css
+++ b/src/app/posts/[cat]/posts.module.css
@@ -7,6 +7,7 @@
 	background-color: #f9f9f9;
 	box-shadow: -1px 1px 2px -0.5px #cccccc;
 }
+
 .post__picture {
 	box-sizing: border-box;
 	flex-shrink: 0;
@@ -27,4 +28,16 @@
 }
 .post__text {
 	margin-bottom: 10px;
+}
+
+@media (max-width: 640px) {
+	.post {
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+	}
+
+	.post__picture {
+		margin-bottom: 15px;
+	}
 }
